--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       <!-- navbar -->
       <nav
         id="navbar"
-        class="z-20 fixed top-5 left-0 w-full px-8 py-4 bg-purple-700 shadow-md text-white flex items-center justify-between transition-padding"
+        class="z-20 fixed top-5 left-0 w-full px-8 py-4 bg-purple-700 shadow-md text-white flex items-center justify-between transition-padding md:w-full"
       >
         <!-- Open Menu Button -->
         <i
