--- a/index.html
+++ b/index.html
@@ -489,85 +489,54 @@
       <!-- sevice -->
 
       <!-- gallery -->
-      <section
-  id="gallery"
-  class="text-center w-full min-h-screen max-w-screen bg-sec"
->
-  <div class="cont py-28 px-4 md:px-20 w-full h-full space-y-11">
-    <div class="heading text-prim">
-      <h1 class="text-4xl md:text-6xl font-bold">Gallery</h1>
-      <p class="text-center font-medium text-lg md:text-xl">
-        Step into our modern salon and indulge in a pampering experience,
-        where advanced hair treatments <br class="hidden md:block" />
-        meet a serene and inviting atmosphere.
-      </p>
-    </div>
-
-    <!-- Responsive layout for images -->
-    <div class="image-cont space-y-5 grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 gap-5">
-      <!-- Row 1 -->
-      <img
-        src="./assets/gallery/1.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/2.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/3.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/4.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-
-      <!-- Row 2 -->
-      <img
-        src="./assets/gallery/5.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/6.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/7.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/8.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-
-      <!-- Row 3 -->
-      <img
-        src="./assets/gallery/9.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/10.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-      <img
-        src="./assets/gallery/11.jpg"
-        alt=""
-        class="object-cover w-full h-[150px] sm:h-[200px] md:h-[250px] lg:h-[300px] rounded-lg shadow-lg"
-      />
-    </div>
-  </div>
-</section>
+            <section id="gallery" class="text-center w-full min-h-screen bg-sec">
+        <div class="cont py-28 px-5 md:px-20 w-full h-full space-y-11">
+            <div class="heading text-prim">
+                <h1 class="text-6xl font-bold">Gallery</h1>
+                <p class="text-center font-medium text-xl">
+                    Step into our modern salon and indulge in a pampering experience,
+                    where advanced hair treatments <br />
+                    meet a serene and inviting atmosphere.
+                </p>
+            </div>
+            <div class="image-cont flex flex-wrap items-center justify-center gap-5">
+                <!-- Each image now adjusts better on smaller screens -->
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/1.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/2.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/3.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/4.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/5.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/6.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/7.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/8.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/9.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/10.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+                <div class="flex flex-col items-center w-full sm:w-1/2 md:w-1/4">
+                    <img src="./assets/gallery/11.jpg" alt="" class="object-cover w-full h-[300px] rounded-lg shadow-lg" />
+                </div>
+            </div>
+        </div>
+    </section>
 
       <!-- gallery -->
 
